# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

load(
    "//:build_defs.bzl",
    "mozc_cc_binary",
    "mozc_cc_library",
    "mozc_cc_test",
    "mozc_select",
)

package(default_visibility = [
    "//:__subpackages__",
])

mozc_cc_library(
    name = "spellchecker_service_interface",
    srcs = ["spellchecker_service_factory.cc"],
    hdrs = ["spellchecker_service_interface.h"],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        "//protocol:commands_cc_proto",
    ],
)

mozc_cc_library(
    name = "spellchecker_service_registration",
    srcs = ["spellchecker_service_registration.cc"],
    hdrs = ["spellchecker_service_interface.h"],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        ":spellchecker_service",
        ":spellchecker_service_interface",
        "//protocol:commands_cc_proto",
    ],
    alwayslink = 1,
)

mozc_cc_library(
    name = "spellchecker_service",
    srcs = ["spellchecker_service.cc"],
    hdrs = ["spellchecker_service.h"],
    tags = ["nowin"],
    target_compatible_with = mozc_select(
        default = [],
        windows = ["@platforms//:incompatible"],
    ),
    deps = [
        ":rulebased_filter",
        ":spellchecker_service_interface",
        "//base:file_util",
        "//base:port",
        "//base:thread",
        "//base:util",
        "//engine:engine_builder",
        "//protocol:commands_cc_proto",
        "//protocol:engine_builder_cc_proto",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
    alwayslink = 1,
)

mozc_cc_binary(
    name = "spellchecker_service_main",
    srcs = ["spellchecker_service_main.cc"],
    tags = ["nowin"],
    target_compatible_with = mozc_select(
        default = [],
        windows = ["@platforms//:incompatible"],
    ),
    deps = [
        ":spellchecker_service_interface",
        ":spellchecker_service_registration",
        "//engine:engine_builder",
        "//protocol:commands_cc_proto",
        "//protocol:engine_builder_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "spellchecker_service_test",
    size = "small",
    srcs = ["spellchecker_service_test.cc"],
    tags = ["nowin"],
    target_compatible_with = mozc_select(
        default = [],
        windows = ["@platforms//:incompatible"],
    ),
    deps = [
        ":spellchecker_service",
        "//base:file_stream",
        "//base:file_util",
        "//base:util",
        "//data_manager",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "rulebased_filter",
    srcs = ["rulebased_filter.cc"],
    hdrs = ["rulebased_filter.h"],
    deps = [
        "//base:file_stream",
        "//base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

mozc_cc_test(
    name = "rulebased_filter_test",
    size = "small",
    srcs = ["rulebased_filter_test.cc"],
    deps = [
        ":rulebased_filter",
        "//base:file_stream",
        "//base:file_util",
        "//base:util",
        "//testing:gunit_main",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
